--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+.old_code/
 .vscode/
 bootstrap/
 core/
 modules/search/miniatures/avatars/*.jpeg
 modules/search/miniatures/avatars/*.png
 .gitignore
+podcast.xml
